in html fixed line link style, make visible the 3 points, in css changed the buton-gallery for the component

--- a/css/style.css
+++ b/css/style.css
@@ -74,18 +74,20 @@ body {
   cursor: pointer;
   transform: scale(1.2, 1.2);
 }
-.button-gallery {
+.button__gallery {
   position: absolute;
-  border-radius: 5%;
   left: 40%;
   height: 30px;
   color: #fefefe;
   margin-top: 5%;
   margin-bottom: 10%;
-  background-color: #039be5;
   border: 0;
   margin-left: auto;
   margin-right: auto;
+}
+.button__gallery:hover{
+  cursor: pointer;
+  transform: scale(1.2, 1.2);
 }
 
 /*end comodities*/
